base/automation/ingress/evolution-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evolution-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - evolution.automatizei.chat
      secretName: evolution-tls
  rules:
    - host: evolution.automatizei.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evolution
                port:
                  number: 8080
